--- a/statuspage/render.yaml
+++ b/statuspage/render.yaml
@@ -10,7 +10,7 @@ services:
     name: mysite
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn financial_tracker.asgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "daphne -b 0.0.0.0 -p $PORT myproject.asgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
